--- a/src/main/resources/static/css/register.css
+++ b/src/main/resources/static/css/register.css
@@ -65,8 +65,8 @@ html {
 }
 
 .btn-submit {
-    background-color: #fff;
-    color: #222;
+    background-color: #4c586f;
+    color: #fff;
     width: 40%;
     margin: 0 auto;
 }
