--- a/src/main/resources/templates/out.html
+++ b/src/main/resources/templates/out.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>ログアウト</title>
 <link rel="stylesheet" href="../static/css/out.css">
 <!--headerのjs-->
 <script src="js/jquery-3.2.1.min.js"></script>
