--- a/src/main/resources/templates/spot.html
+++ b/src/main/resources/templates/spot.html
@@ -521,7 +521,7 @@
 		<!--footer_メニューの中身-->
 		<div class="f_open">
 			<div class="f_logo">
-				<img th:src="@{/imaglogo22.png" alt="" />
+				<img th:src="@{/imag/logo22.png}" alt="" />
 			</div>
 
 			<div class="category_list">
