--- a/src/main/resources/templates/manager_page.html
+++ b/src/main/resources/templates/manager_page.html
@@ -320,7 +320,7 @@
 
 		<!-- 削除完了コメント -->
 		<p th:if="${spotDelComp}" th:text="${spotDelComp}"></p>
-		<p th:if="${msg}" th:text="${msg}"></p>
+		<p th:if="${updateComp}" th:text="${updateComp}"></p>
 
 		<!-- ▼▼▼ 観光地情報が1件でもあれば表示 ▼▼▼ -->
 		<script>
