--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<link href="../static/css/style_oomuro.css" rel="stylesheet"
+<link th:href="@{/css/style_oomuro.css" rel="stylesheet"
 	type="text/css">
 <title>新規登録</title>
-<link rel="stylesheet" href="../static/css/register.css">
+<link rel="stylesheet" th:href="@{/css/register.css">
 <!--headerのjs-->
 <script src="js/jquery-3.2.1.min.js"></script>
 
@@ -16,13 +17,13 @@
 	href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
 
 <!--headercss-->
-<link href="../static/css/meanmenu.css" rel="stylesheet" type="text/css">
-<link href="../static/css/font-awesome.min.css" rel="stylesheet"
+<link th:href="@{/css/meanmenu.css" rel="stylesheet" type="text/css">
+<link th:href="@{/css/font-awesome.min.css" rel="stylesheet"
 	type="text/css">
-<link href="../static/css/header.css" rel="stylesheet" type="text/css">
+<link th:href="@{/css/header.css" rel="stylesheet" type="text/css">
 <!--css-->
-<link href="../static/css/i-style.css" rel="stylesheet" type="text/css">
-<link href="../static/css/parts.css" rel="stylesheet" type="text/css">
+<link th:href="@{/css/i-style.css" rel="stylesheet" type="text/css">
+<link th:href="@{/css/parts.css" rel="stylesheet" type="text/css">
 
 <!--font-awesome-->
 <link rel="stylesheet" type="text/css"
@@ -59,8 +60,8 @@
 <script type="text/javascript" src="js/scroll.js"></script>
 
 <!--slider-->
-<link href="../static/css/slick.css" rel="stylesheet" type="text/css">
-<link href="../static/css/slick-theme.css" rel="stylesheet"
+<link th:href="@{/css/slick.css" rel="stylesheet" type="text/css">
+<link th:href="@{/css/slick-theme.css" rel="stylesheet"
 	type="text/css">
 
 <!--headerscript-->
@@ -202,7 +203,7 @@
 		<div class="container">
 			<div id="h_top">
 				<div class="h_logo">
-					<a href=""><img src="../imag/logo22.png" alt="" /></a>
+					<a href=""><img th:src="@{/imag/logo22.png" alt="" /></a>
 				</div>
 				<div class="h_nav">
 					<nav id="gNav">
@@ -223,7 +224,7 @@
 	<header class="mheader">
 		<div class="pc_menuFlex">
 			<div class="i-logo">
-				<a href="#"><img src="../imag/logo22.png" alt="" /></a>
+				<a href="#"><img th:src="@{/imag/logo22.png" alt="" /></a>
 			</div>
 			<div class="pc_menu">
 				<ul>
