--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -195,7 +195,6 @@
 					})(document);
 </script>
 
-
 </head>
 <body>
 	<header id="header">
@@ -209,8 +208,8 @@
 						<ul class="nav">
 							<li><a href="">ボタン</a></li>
 							<li><a href="">ボタン</a></li>
-							<li><a href="register.html" class="btn-sin">新規登録</a></li>
-							<li><a href="manager_login.html" class="btn-log">ログイン</a></li>
+							<li><a th:href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
+							<li><a th:href="@{/oritabi/manager_login}" class="btn-log">ログイン</a></li>
 						</ul>
 						<div class="mask"></div>
 					</nav>
@@ -229,8 +228,8 @@
 				<ul>
 					<li><a href="#nav01">ボタン</a></li>
 					<li><a href="#nav02">ボタン</a></li>
-					<li><a href="register.html" class="btn-sin">新規登録</a></li>
-					<li><a href="manager_login.html" class="btn-log">ログイン</a></li>
+					<li><a th:href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
+					<li><a th:href="@{/oritabi/manager_login}" class="btn-log">ログイン</a></li>
 				</ul>
 			</div>
 		</div>
@@ -250,6 +249,16 @@
 	<div id="displayElement1">
 		<!--  マップの表示 -->
 		<div id="map1" style="height: 300px;"></div>
+
+		<p id="result">ooo</p>
+		<script type="text/javascript">
+				$(function(){
+				  var d = sessionStorage.getItem('key');
+				  $("#result").text(d);
+				})
+				</script>
+
+
 		<!--  選択した住所表示 -->
 		<div class="jun">
 			<p>ピンをクリックして順番を決めてください</p>
@@ -269,16 +278,14 @@
 		<div class="suke">
 			<h3>スケジュール</h3>
 			<!-- 住所の要素 -->
+			<p>名前 場所</p>
 			<!-- 所要時間の要素 -->
-			<div id="address_1"></div>
 			<div id="leg1"></div>
-			<div id="address_2"></div>
+			<p>名前 場所</p>
 			<div id="leg2"></div>
-			<div id="address_3"></div>
+			<p>名前 場所</p>
 			<div id="leg3"></div>
-			<div id="address_4"></div>
-			<div id="leg4"></div>
-			<div id="address_5"></div>
+			<p>名前 場所</p>
 		</div>
 	</div>
 
@@ -316,13 +323,13 @@
 			// 地図1の初期化
 			map1 = new google.maps.Map(document.getElementById('map1'), {
 				center : mapCenter,
-				zoom : 11.5
+				zoom : 12
 			});
 
 			// 地図2の初期化
 			map2 = new google.maps.Map(document.getElementById('map2'), {
 				center : mapCenter,
-				zoom : 11.5
+				zoom : 12
 			});
 
 			// 各地図に対する処理を追加
@@ -332,11 +339,9 @@
 
 		<!--map1の処理-->
             let selectedAddresses = [];
-            let clickedAddresses = []; // クリックされた住所を記録するための配列
-            
 		function setupMap1() {
             const locations = [
-            	//データベースから住所を取ってくる
+            	<!--データベースから住所を取ってくる-->
             	{ name: '大阪駅' },
                 { name: '京セラドーム' },
                 { name: '心斎橋駅' },
@@ -367,65 +372,45 @@
                         });
 
                         marker.addListener('click', function() {
-                            // クリックされた住所がすでにclickedAddressesに含まれていない場合に処理を実行
-                            if (!clickedAddresses.includes(address.name)) {
-                                // 選択された住所を配列に追加
-                                selectedAddresses.push(address.name);
-                                document.getElementById('addressDisplay').textContent = address.name;
+                            // 選択された住所を配列に追加
+                            selectedAddresses.push(address.name);
+                            document.getElementById('addressDisplay').textContent = address.name;
 
-                                // クリックされた住所をclickedAddressesに追加
-                                clickedAddresses.push(address.name);
-
-                                // リストとして選択された住所を表示
-                                updateAddressList();
-                            }
+                            // リストとして選択された住所を表示
+                            updateAddressList();
                         });
-
                     } else {
                         alert('ジオコーディングに失敗しました: ' + status);
                     }
                 });
             });
 
-            //選び直すボタン-->
+            <!--選び直すボタン-->
             const undoButton = document.getElementById('undoButton');
             undoButton.addEventListener('click', function() {
                 // リストから最後に選択された住所を削除
-                const lastSelectedAddress = selectedAddresses.pop();
-
-    			// クリックされた住所の記録からも削除
-   			 	const index = clickedAddresses.indexOf(lastSelectedAddress);
-    			if (index !== -1) {
-        			clickedAddresses.splice(index, 1);
-   					}
-
+                selectedAddresses.pop();
                 // 住所リストを更新
                 updateAddressList();
             });
 
-            //クリックした住所
+            <!--クリックした住所-->
             function updateAddressList() {
                 const addressList = document.getElementById('selectedAddresses');
                 addressList.innerHTML = '<h3>　目的地の順番：</h3>' +
                     '<ul>' + selectedAddresses.map(addr => `<li>　${addr}　</li>`).join('') + '</ul>';
-                    
-                    for (let x = 0; x < selectedAddresses.length; x++) {
-                    	  const addressElement = document.getElementById('address_' + (x + 1));
-                    	  if (addressElement) {
-                    	    addressElement.textContent = selectedAddresses[x]; // 選択されたアドレスを設定
-                    	  }
-                    	}
             }
         }
-		// map2の処理
+		
+		<!--map2の処理-->
 		function setupMap2(map) {
-		    // 出発地、目的地、ウェイポイントの設定
-		    const directionsService = new google.maps.DirectionsService();
-		    const directionsRenderer = new google.maps.DirectionsRenderer({
-		        map: map,
-		    });
+			// 出発地、目的地、ウェイポイントの設定
+			const directionsService = new google.maps.DirectionsService();
+			const directionsRenderer = new google.maps.DirectionsRenderer({
+				map : map,
+			});
 
-		    // ウェイポイントの配列を作成
+			// ウェイポイントの配列を作成
 		    const waypoints = [];
 
 		    for (let i = 1; i < selectedAddresses.length - 1; i++) {
@@ -443,33 +428,38 @@
 		        optimizeWaypoints: true, // ウェイポイントの最適化を有効にする
 		    };
 
-		    // Directions サービスを使用して経路を計算
-		    directionsService.route(request, function (response, status) {
-		        if (status === 'OK') {
-		            // 経路情報を地図に描画
-		            directionsRenderer.setDirections(response);
+			// Directions サービスを使用して経路を計算
+			directionsService
+					.route(
+							request,
+							function(response, status) {
+								if (status === 'OK') {
+									// 経路情報を地図に描画
+									directionsRenderer.setDirections(response);
 
-		            // 所要時間を表示
-		            for (let x = 0; x < response.routes[0].legs.length; x++) {
-		                document.getElementById('leg' + (x + 1)).textContent = `　↓　${response.routes[0].legs[x].duration.text}`;
-		            }
-		         
-		        } else {
-		            alert('ルートの取得中にエラーが発生しました: ' + status);
-		        }
-		    });
+									// 所要時間を表示
+									//配列で回す
+									for(let x = 0; x < request.length; x++){
+									document.getElementById('leg'+ (x+1)).textContent = `　↓　${response.routes[0].legs[x].duration.text}`;
+									}
+								} else {
+									alert('ルートの取得中にエラーが発生しました: ' + status);
+								}
+							});
 		}
-
 	</script>
-
 
 	<!-- Google Maps JavaScript APIの読み込み -->
 	<script
-		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnAhS4QglEOA1OS33iZ2S3-mZRx6qId34&callback=initMap"
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVClt3T6_YjhogNvKLn8XYb20nSNifSKg&callback=initMap"
 		async defer></script>
 
 
+	</div>
 	<br>
+
+	<p id="result"></p>
+
 	<!-- ボタン -->
 	<button id="toggleButton">ルート表示</button>
 	<hr>
@@ -522,13 +512,13 @@
 
 			<dl>
 				<dd>
-					<a href="register.html"><div class="btn-sin">新規登録</div></a>
+					<a href="@{/oritabi/register}"><div class="btn-sin">新規登録</div></a>
 				</dd>
 			</dl>
 
 			<dl>
 				<dd>
-					<a href="manager_login.html"><div class="btn-log">ログイン</div></a>
+					<a href="@{/oritabi/manager_login}"><div class="btn-log">ログイン</div></a>
 				</dd>
 			</dl>
 
