--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -178,8 +178,8 @@ $(function($){
 					<ul class="nav">
 						<li><a href="">ボタン</a></li>
 						<li><a href="">ボタン</a></li>
-						<li><a href="register.html" class="btn-sin">新規登録</a></li>
-						<li><a href="manager_login.html"class= "btn-log">ログイン</a></li>
+						<li><a th:href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
+						<li><a th:href="@{/oritabi/manager_login}" class="btn-log">ログイン</a></li>
 					</ul>
 					<div class="mask"></div>
 				</nav>
@@ -197,8 +197,9 @@ $(function($){
 				<ul>
 					<li><a href="#nav01">ボタン</a></li>
 					<li><a href="#nav02">ボタン</a></li>
-					<li><a href="register.html" class="btn-sin">新規登録</a></li>
-					<li><a href="manager_login.html"class= "btn-log">ログイン</a></li>
+					<li><a th:href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
+					<li><a th:href="@{/oritabi/manager_login}" class="btn-log">ログイン</a></li>
+					
 				</ul>
 			</div> 
 		</div>
@@ -429,11 +430,11 @@ $(function($){
 					</dl>
 					
 					<dl>
-						<dd><a href ="register.html"><div class="btn-sin">新規登録</div></a></dd>
+						<dd><a th:href="@{/oritabi/register}"><div class="btn-sin">新規登録</div></a></dd>
 					</dl>
 					
 					<dl>
-						<dd><a href="manager_login.html"><div class= "btn-log">ログイン</div></a></dd>
+						<dd><a th:href="@{/oritabi/manager_login}"><div class= "btn-log">ログイン</div></a></dd>
 					</dl>
 			</div>
 
