--- a/src/main/resources/templates/purpose_osaka.html
+++ b/src/main/resources/templates/purpose_osaka.html
@@ -212,8 +212,8 @@
 						<ul class="nav">
 							<li><a href="">ボタン</a></li>
 							<li><a href="">ボタン</a></li>
-							<li><a href="register.html" class="btn-sin">新規登録</a></li>
-							<li><a href="manager_login.html" class="btn-log">ログイン</a></li>
+							<li><a th:href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
+							<li><a th:href="@{/oritabi/manager_login}" class="btn-log">ログイン</a></li>
 						</ul>
 						<div class="mask"></div>
 					</nav>
@@ -232,8 +232,8 @@
 				<ul>
 					<li><a href="#nav01">ボタン</a></li>
 					<li><a href="#nav02">ボタン</a></li>
-					<li><a href="register.html" class="btn-sin">新規登録</a></li>
-					<li><a href="manager_login.html" class="btn-log">ログイン</a></li>
+					<li><a th:href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
+					<li><a th:href="@{/oritabi/manager_login}" class="btn-log">ログイン</a></li>
 				</ul>
 			</div>
 		</div>
@@ -356,13 +356,13 @@
 
 			<dl>
 				<dd>
-					<a href="register.html"><div class="btn-sin">新規登録</div></a>
+					<a th:href="@{/oritabi/register}"><div class="btn-sin">新規登録</div></a>
 				</dd>
 			</dl>
 
 			<dl>
 				<dd>
-					<a href="manager_login.html"><div class="btn-log">ログイン</div></a>
+					<a th:href="@{/oritabi/manager_login}" ><div class="btn-log">ログイン</div></a>
 				</dd>
 			</dl>
 		</div>
