--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -5,8 +5,7 @@
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<link th:href="@{/css/style_oomuro.css" rel="stylesheet"
-	type="text/css">
+<link th:href="@{/css/style_oomuro.css}" rel="stylesheet" type="text/css">
 <title>新規登録</title>
 <link rel="stylesheet" th:href="@{/css/register.css">
 <!--headerのjs-->
