--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,7 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <link th:href="@{/css/style_oomuro.css}" rel="stylesheet" type="text/css">
 <title>新規登録</title>
-<link rel="stylesheet" th:href="@{/css/register.css">
+<link rel="stylesheet" th:href="@{/css/register.css}">
 <!--headerのjs-->
 <script src="js/jquery-3.2.1.min.js"></script>
 
@@ -16,13 +16,13 @@
 	href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
 
 <!--headercss-->
-<link th:href="@{/css/meanmenu.css" rel="stylesheet" type="text/css">
-<link th:href="@{/css/font-awesome.min.css" rel="stylesheet"
+<link th:href="@{/css/meanmenu.css}" rel="stylesheet" type="text/css">
+<link th:href="@{/css/font-awesome.min.css}" rel="stylesheet"
 	type="text/css">
-<link th:href="@{/css/header.css" rel="stylesheet" type="text/css">
+<link th:href="@{/css/header.css}" rel="stylesheet" type="text/css">
 <!--css-->
-<link th:href="@{/css/i-style.css" rel="stylesheet" type="text/css">
-<link th:href="@{/css/parts.css" rel="stylesheet" type="text/css">
+<link th:href="@{/css/i-style.css}" rel="stylesheet" type="text/css">
+<link th:href="@{/css/parts.css}" rel="stylesheet" type="text/css">
 
 <!--font-awesome-->
 <link rel="stylesheet" type="text/css"
@@ -59,8 +59,8 @@
 <script type="text/javascript" src="js/scroll.js"></script>
 
 <!--slider-->
-<link th:href="@{/css/slick.css" rel="stylesheet" type="text/css">
-<link th:href="@{/css/slick-theme.css" rel="stylesheet"
+<link th:href="@{/css/slick.css}" rel="stylesheet" type="text/css">
+<link th:href="@{/css/slick-theme.css}" rel="stylesheet"
 	type="text/css">
 
 <!--headerscript-->
@@ -223,7 +223,7 @@
 	<header class="mheader">
 		<div class="pc_menuFlex">
 			<div class="i-logo">
-				<a href="#"><img th:src="@{/imag/logo22.png" alt="" /></a>
+				<a href="#"><img th:src="@{/imag/logo22.png}" alt="" /></a>
 			</div>
 			<div class="pc_menu">
 				<ul>
@@ -332,7 +332,7 @@
 	<!--footer_メニューの中身-->
 	<div class="f_open">
 		<div class="f_logo">
-			<img src="../imag/logo22.png" alt="" />
+			<img src="@{/imag/logo22.png}" alt="" />
 		</div>
 
 		<div class="category_list">
