--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -202,7 +202,7 @@
 		<div class="container">
 			<div id="h_top">
 				<div class="h_logo">
-					<a href=""><img th:src="@{/imag/logo22.png" alt="" /></a>
+					<a href=""><img th:src="@{/imag/logo22.png}" alt="" /></a>
 				</div>
 				<div class="h_nav">
 					<nav id="gNav">
