spot register 変更

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -295,10 +295,10 @@
 						</div>
 						<div class="btn-box">
 							<button type="submit" class="btnds btn-submit"
-								onclick="location.href='spot.html'">登録</button>
+								onclick="location.href='@{/oritabi/spot}'">登録</button>
 						</div>
 					</div>
-				</div>
+				</div>s
 			</div>
 		</form>
 	</div>
