--- a/src/main/resources/templates/spot.html
+++ b/src/main/resources/templates/spot.html
@@ -471,7 +471,7 @@
 				<div class="pickup">
 					<a target="_blank" rel="noopener noreferrer">
 						<div class="button-box">
-							<input type="submit" id="submit" value="pickup" onclick="location.href='mapcopy.html'"  >
+							<input type="submit" id="submit" value="pickup" onclick="location.href='@{/oritabi/map}'"  >
 
 						</div>
 					</a>
