--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -298,7 +298,7 @@
 								onclick="location.href='@{/oritabi/spot}'">登録</button>
 						</div>
 					</div>
-				</div>s
+				</div>
 			</div>
 		</form>
 	</div>
